traversal.snake.Snake.scala.code
override def run() {
  brushDown();
  while(isFinalPosition()) {
    moveLikeSnake();
  }
}


def isFinalPosition() : Boolean = {
  var ok:Boolean = false;
  
  if (isFacingWall()) {
    if (getDirection() == Direction.west) {
      right();
      if (isFacingWall()) {
        ok = true;
      }
      left();
    }
  }
  
  return ok;
}

def moveLikeSnake() {
  if (!isFacingWall()) {
    forward();
  } else {
    getDirection() match {
      case Direction.west => right(); forward(); right();
      case Direction.east => left(); forward(); left();
  		case _ => return;
    }
  }
}